Upgrades; gradle 5-> 8, jdk 11->17, spring 2->3, circleci (#2)
* upgraded from 5 to 8 - build fail
* using libs.versions.toml, bdd compile fail
* gradle 8 build working, test failures
* --add-opens to fix reflection in unittesting embers-services
* bruno collection added
* A/T passing, Spring failing
* upgraded to spring 3
* moved libs to toml
* toml version tweaks
* spring removed unused
* fix jacoco for root
* update circleci to jdk17++